add $el to vlite

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="app"></div> 
   <div id="app1"></div> 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  <script src="./vlite.js"></script>
+  <script src="./vlite.min.js"></script>
   <script src="./main.js"></script>
 </body>
 </html>
