use webpack to manage library

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-  <div id="app"></div> 
-  <div id="app1"></div> 
+  <div id="app"></div>
+  <div id="app1"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  <script src="./vlite.min.js"></script>
-  <script src="./main.js"></script>
+  <script src="./dist/vlite.min.js"></script>
+  <script>
+    var vlite = new Vlite()
+    vlite.init('#app', "/test.tpl.html", "")
+  </script>
 </body>
+
 </html>
