--- a/test.tpl.html
+++ b/test.tpl.html
@@ -3,9 +3,7 @@
   <p class="p1" onclick="printb()">use this to set interesting content</p>
 </template>
 <script>
-  $el.find('.title').click(function() {
-    alert('title')
-  })
+  console.log(this)
 </script>
 <style>
 .title {
